--- a/source/styleguide/index.html.md.erb
+++ b/source/styleguide/index.html.md.erb
@@ -87,7 +87,7 @@ title: StyleGuide
     <i class="icon-xl icon-social-youtube"></i>
     <i class="icon-xl icon-social-youtube-outline"></i>
   </article>
-  <article id="icons-icomoon">
+  <article id="icons-feather">
     <i class="icon-xl icon-activity"></i>
     <i class="icon-xl icon-airplay"></i>
     <i class="icon-xl icon-alert-circle"></i>
